<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer"
    tools:context="com.example.admin.f_traveller.SignupActivity">

    <ImageView
        android:id="@+id/imline2"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTphonenumber"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_phone"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iVkenya"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/kenya"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        android:layout_marginStart="50dp"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:contentDescription="" />

    <TextView
        android:id="@+id/tVcountry"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:text="@string/kenya"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/iVkenya"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imline1"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iVkenya"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="26dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/_254"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline1"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/eTphonenumber"
        android:layout_width="215dp"
        android:layout_height="35dp"
        android:layout_marginLeft="0dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tVcountry" />

    <Button
        android:id="@+id/bNext"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/next"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/we_ll_send_you_an_sms_for_confirmation"
        android:textColor="@color/colorAccent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline2" />

</android.support.constraint.ConstraintLayout>
