<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer"
    tools:context="com.example.admin.f_traveller.BookingActivity">

    <TextView
        android:id="@+id/tVbooking"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/booking"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVfrom"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="100dp"
        android:text="From:"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <Spinner
        android:id="@+id/spFrom"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:dropDownWidth="match_parent"
        android:fadeScrollbars="true"
        android:popupBackground="@drawable/planelayer"
        android:spinnerMode="dropdown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tVfrom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imline11"
        android:layout_width="270dp"
        android:layout_height="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVfrom"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription"
        app:layout_constraintHorizontal_bias="0.5" />

    <Spinner
        android:id="@+id/spTo"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:popupBackground="@drawable/planelayer"
        android:spinnerMode="dropdown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tVto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline11"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tVto"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="16dp"
        android:text="To:"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline11"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <ImageView
        android:id="@+id/imline12"
        android:layout_width="270dp"
        android:layout_height="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVto"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tVdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="80dp"
        android:text="@string/date_of_travel"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVto"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tVreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/Return"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/bsearch"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/loginb"
        android:text="@string/search_bus"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBreturn"
        app:layout_constraintVertical_bias="0.846" />

    <Button
        android:id="@+id/button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/caledar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVdate"
        tools:ignore="RtlHardcoded" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="-14dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/_22_05_2017"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toRightOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/tVdate"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:id="@+id/cBreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:textColor="@color/colorAccent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tVreturn" />

</android.support.constraint.ConstraintLayout>
