<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer"
    tools:context="com.example.admin.f_traveller.RegistrationActivity">



    <TextView
        android:id="@+id/tvdetail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_details"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imline5"
        android:layout_width="250dp"
        android:layout_height="5dp"
        app:srcCompat="@drawable/line"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textlayout_email" />

    <ImageView
        android:id="@+id/imline6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/line"
        tools:ignore="ContentDescription"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Textlayout_lastname" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout_idno"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline6">

        <EditText
            android:id="@+id/eTidno"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/id_number"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="191dp" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imline7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/line"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textlayout_idno" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlayout_idno"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/eTemail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="290dp" />
    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/imline8"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/line"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription,NotSibling"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/TILayout" />

    <ImageView
        android:id="@+id/imline9"
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/line"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription,MissingConstraints"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textlayout_password" />

    <ImageView
        android:id="@+id/imline10"
        android:layout_width="250dp"
        android:layout_height="5dp"
        app:srcCompat="@drawable/line"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bregister"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/loginb"
        android:text="@string/signup"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline10"
        app:layout_constraintVertical_bias="0.9" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlayout_password"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/eTconfirm"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="338dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TILayout"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="64dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.45">

        <EditText
            android:id="@+id/etfirstname"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="56dp"
        android:orientation="vertical" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/Textlayout_lastname"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imline8">

        <EditText
            android:id="@+id/etlastname"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imline5" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imline5">

        <EditText
            android:id="@+id/eTpassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="306dp" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
